<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GameActivity"
    android:id="@+id/game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- TextView for math question -->
    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=""
        android:gravity="center"
        android:layout_margin="16dp"
        android:textColor="?attr/colorPrimary" />

    <!-- textview for answer input -->
    <TextView
        android:id="@+id/answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text=""
        android:gravity="center"
        android:layout_margin="16dp" />

    <!-- Number buttons 0-9 -->
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="4"
        android:columnCount="3"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/button_1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_1"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_2"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_3"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_3"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_4"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_4"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_5"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_5"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_6"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_6"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_7"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_7"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_8"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_8"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_9"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_9"
            android:textSize="24sp" />
        <Button
            android:id="@+id/button_0"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:text="@string/number_0"
            android:textSize="24sp"
            android:layout_column="1"/>


    </GridLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >
        <!-- Submit button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="20sp"
            android:layout_margin="16dp"
            app:icon="@drawable/check_24" />

        <!-- Next button -->
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:textSize="20sp"
            android:layout_margin="16dp"
            app:icon="@drawable/next_24" />
    </LinearLayout>

    <!-- Feedback TextView -->
    <TextView
        android:id="@+id/feedback_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="16dp" />

    <!-- Feedback Textview -->
    <TextView
        android:id="@+id/correct_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="16dp" />

</LinearLayout>
